dashbord and tabler

--- a/ClientReact/package.json
+++ b/ClientReact/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^8.0.2",
     "@mantine/modals": "^8.0.2",
     "@mantine/notifications": "^8.0.2",
+    "@tabler/icons-react": "^3.34.0",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.18.1",
