--- a/ClientReact/package.json
+++ b/ClientReact/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gfazioli/mantine-onboarding-tour": "^2.3.1",
     "@gfazioli/mantine-text-animate": "^2.1.1",
     "@mantine/carousel": "^8.0.2",
     "@mantine/charts": "^8.0.2",
