--- a/ClientReact/package.json
+++ b/ClientReact/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@gfazioli/mantine-onboarding-tour": "^2.3.1",
     "@gfazioli/mantine-text-animate": "^2.1.1",
     "@mantine/carousel": "^8.0.2",
@@ -21,6 +22,7 @@
     "@mantine/notifications": "^8.0.2",
     "@tabler/icons-react": "^3.34.0",
     "axios": "^1.11.0",
+    "emailjs": "^4.0.3",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
